--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ Makefile*
 
 *.bak
 #.exe #I'm still keeping this in case I want to demonstrate/test this in an windows environment I don't have relevant tools in
+*.synctex.*
+*~
+*.log
+*.aux
