--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,12 @@
-# C++ objects and libs
 
-*.slo
-*.lo
-*.o
-*.a
-*.la
-*.lai
-*.so
-*.dll
-*.dylib
-
-# Qt-es
-
-/.qmake.cache
-/.qmake.stash
-*.pro.user
-*.pro.user.*
-*.qbs.user
-*.qbs.user.*
-*.moc
-moc_*.cpp
-qrc_*.cpp
-ui_*.h
-#Makefile*
-*-build-*
-
-# QtCreator
-
-*.autosave
-
-#QtCtreator Qml
-*.qmlproject.user
-*.qmlproject.user.*
+# Rust and cargo
+*.lock
+target/
 
 # other
-
 *.bak
 *.synctex.*
 *~
 *.log
 *.aux
-bin/*
 *#
