--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["mrZalli <misterzalli@gmail.com>"]
 
 [dependencies]
 regex = "0.1"
+#lazy_static = "0.1"
 
 [dependencies.nom]
 version = "~1.2.0"
